--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="wiktorp">WiktorP</string>
+    <string name="wiktor_gmail_com">wiktor@gmail.com</string>
+    <string name="login">Login</string>
+    <string name="todo">TODO</string>
 </resources>
