--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
     <string name="wiktor_gmail_com">wiktor@gmail.com</string>
     <string name="login">Login</string>
     <string name="todo">TODO</string>
+    <string name="please_log_in">Please Log In</string>
+    <string name="messege">messege:</string>
+    <string name="username">username</string>
+    <string name="email">email</string>
+    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
+    <string name="generate_background_color">generate background color</string>
+    <string name="create_user">create user</string>
 </resources>
